--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -61,32 +61,22 @@ conky.config = {
     use_spacer = 'none',
     show_graph_scale = false,
     show_graph_range = false,
-    default_color = '1793d0',
-    color0 = 'white',
-    color1 = '1793d0',
-    color2 = 'white',
-    color3 = '1793d0'
+    default_color = 'fafafa',
+    color0 = 'e0e0e0',
 }
 
 conky.text = [[
-#############
-# - CLOCK - #
-#############
-${voffset 10}${alignc}${color2}${font Droid Sans:style=Bold:size=28}${time %I:%M:%S}${font} ${time %p}${color}
-${voffset 5}${alignc 12}${time %d %B %Y}
-
 ##############
 # - SYSTEM - #
 ##############
-${font Droid Sans:style=Bold:size=14}SYSTEM ${hr 3}${font}
-${color0}${font}${color}${voffset -16}
-${goto 15}Kernel: ${font}${alignr}${color2}${kernel}${color}
-${goto 15}Uptime: ${font}${alignr}${color2}${uptime}${color}
-${goto 15}CPU: ${color2}${alignr}$freq_g GHz
-${goto 20}${voffset 5}${cpu cpu0}% ${cpubar cpu0 10}
-${goto 20}${voffset 5}${cpu cpu1}% ${cpubar cpu1 10}
-${goto 20}${voffset 5}${cpu cpu2}% ${cpubar cpu2 10}${color}
-${goto 15}${voffset 5}RAM: ${color2}${alignr}$mem / $memmax
+${voffset 50}${font Droid Sans:style=Bold:size=14}${color}SYSTEM ${hr 3}${font}
+${font}${color}${voffset -16}
+${goto 15}Kernel: ${font}${alignr}${color0}${kernel}${color}
+${goto 15}Uptime: ${font}${alignr}${color0}${uptime}${color}
+${goto 15}CPU: ${color0}${alignr}$freq_g GHz
+${goto 20}${color}${voffset 5}${cpu cpu0}% ${cpubar cpu0 10}
+${goto 20}${color}${voffset 5}${cpu cpu1}% ${cpubar cpu1 10}
+${goto 15}${color}${voffset 5}${color0}RAM: ${alignr}$mem / $memmax
 ${goto 20}${voffset 5}${memperc}% ${membar 10}${color}
 
 #################
@@ -94,19 +84,19 @@ ${goto 20}${voffset 5}${memperc}% ${membar 10}${color}
 #################
 ${voffset 10}${font Droid Sans:bold:size=14}${voffset 10}PROCESSES ${hr 3}${font}
 ${goto 15}${voffset 5}${font Droid Sans:bold:size=8}Process Name${alignr}PID  CPU  MEM${font}
-${goto 15}${color2}${font Droid Sans:size=8}${voffset -2}${top name 1}${alignr}${top pid 1} ${top cpu 1} ${top mem 1}
+${goto 15}${color0}${font Droid Sans:size=8}${voffset -2}${top name 1}${alignr}${top pid 1} ${top cpu 1} ${top mem 1}
 ${goto 15}${top name 2}${alignr}${top pid 2} ${top cpu 2} ${top mem 2}
 ${goto 15}${top name 3}${alignr}${top pid 3} ${top cpu 3} ${top mem 3}
 ${goto 15}${top name 4}${alignr}${top pid 4} ${top cpu 4} ${top mem 4}
 ${goto 15}${top name 5}${alignr}${top pid 5} ${top cpu 5} ${top mem 5}
 ${goto 15}${top name 6}${alignr}${top pid 6} ${top cpu 6} ${top mem 6}${font}${color}
-${goto 15}${voffset 0}${font Droid Sans:Bold:size=9}Total: ${font Droid Sans:Regular:size=9}${color2}$processes${color}${alignr}${voffset 2}${font Droid Sans:Bold:size=9}Running: ${font Droid Sans:Regular:size=9}${color2}$running_processes$color
+${goto 15}${voffset 0}${font Droid Sans:Bold:size=9}Total: ${font Droid Sans:Regular:size=9}${color0}$processes${color}${alignr}${voffset 2}${font Droid Sans:Bold:size=9}Running: ${font Droid Sans:Regular:size=9}${color0}$running_processes$color
 
 ################
 # - DISK - #
 ################
 ${voffset 10}${font Droid Sans:style=Bold:size=14}DISK ${hr 3}${font}
-${goto 15}${voffset 10}${color}/${alignr}${color2}${fs_used /} / ${fs_size /}
-${goto 15}${voffset 5}${fs_used_perc /}% ${fs_bar 6 /}${color}
+${goto 15}${voffset 10}${color}/${alignr}${color0}${fs_used /} / ${fs_size /}
+${goto 15}${color}${voffset 5}${fs_used_perc /}% ${fs_bar 6 /}
 
 ]]
