--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=path-bar
 ShowHidden=false
 ShowSizeColumn=true
-GeometryX=964
-GeometryY=627
-GeometryWidth=955
-GeometryHeight=630
+GeometryX=575
+GeometryY=253
+GeometryWidth=1740
+GeometryHeight=1305
 SortColumn=name
-SortOrder=ascending
+SortOrder=descending
 StartupMode=recent
