--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,16 +1,18 @@
 [Settings]
-gtk-theme-name=Numix
+gtk-theme-name=Arc-Darker
 gtk-icon-theme-name=Numix-Circle
-gtk-font-name=Droid Sans 11
-gtk-cursor-theme-name=Adwaita
-gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=0
 gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
+gtk-icon-sizes="panel-menu=32,32:panel=48,32:gtk-menu=32,48:gtk-large-toolbar=48,48\
+:gtk-small-toolbar=48,48:gtk-button=32,32"
+gtk-font-name=Sans 10
+gtk-cursor-theme-name=DMZ-White
+gtk-cursor-theme-size=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
